libs/extractor/tests/snapshots/all_tests__style_order2-3.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box, css} from '@devup-ui/core'\n    <Box styleOrder={`20`} p=\"4\" _hover={{ bg: [\"red\", \"blue\"]}}\n    className={css({color:\"white\", styleOrder:`100`})}\n\n     selectors={{\n    \"*[aria-diabled='true'] &\": {\n      opacity: 0.5\n      }\n    }} />\n            \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 1,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "white",
                level: 0,
                selector: None,
                style_order: Some(
                    100,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "opacity",
                value: ".5",
                level: 0,
                selector: Some(
                    Selector(
                        "*[aria-diabled='true'] &",
                    ),
                ),
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "16px",
                level: 0,
                selector: None,
                style_order: Some(
                    20,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b c d e\" />;\n",
}
